--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- For all browsers -->
-<link rel="stylesheet" href="css/320andup.css">
+<link rel="stylesheet" href="css/style.css">
+
 
 <!--[if (lt IE 9) & (!IEMobile)]>
 <script src="js/selectivizr-min.js"></script>
@@ -78,12 +79,12 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 </div><!-- / content -->
 
 <nav role="navigation" id="navigation">
-<p></p>
+<p>Home</p>
 </nav>
 
 <footer role="contentinfo">
 <small>Wirefy, a flexible &#169; responsive wireframe boilerplate by <a href="http://chrisdasie.com">Chris Da Sie</a>.</small>
-<small>&#8216;320 and Up&#8217; wouldn&#8217;t be possible without <a href="http://stuffandnonsense.co.uk/projects/320andup/">320 and Up</a>, <a href="http://html5boilerplate.com/">HTML5 Boilerplate</a>, <a href="http://framelessgrid.com/">Frameless grid</a> and <a href="http://twitter.github.com/bootstrap/">Bootstrap</a>. Licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>. The Font Awesome webfont, CSS files are licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</small>
+<small>Wirefy wouldn&#8217;t be possible without <a href="http://stuffandnonsense.co.uk/projects/320andup/">320 and Up</a>, <a href="http://html5boilerplate.com/">HTML5 Boilerplate</a>, <a href="http://framelessgrid.com/">Frameless grid</a> and <a href="http://twitter.github.com/bootstrap/">Bootstrap</a>. Licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>. The Font Awesome webfont, CSS files are licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</small>
 </footer>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
