Updated media queries

--- a/index.html
+++ b/index.html
@@ -484,11 +484,12 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 					<section class="doc-section" id="mediaQueries">
 						<h3>Media Queries</h3>
 						<ul class="square">
-							<li><strong>Smaller than 960</strong>: Smaller than the standard base grid</li>
-							<li><strong>Tablet Portrait</strong>: Between 768px and 959px</li>
-							<li><strong>All Mobile Sizes</strong>: Less than 767px</li>
-							<li><strong>Just Mobile Landscape</strong>: Between 480px and 767px</li>
-							<li><strong>Just Mobile Portrait</strong>: Less than 479px</li>
+							<li><strong>320px</strong></li>
+							<li><strong>640px</strong></li>
+							<li><strong>720px</strong></li>
+							<li><strong>888px</strong></li>
+							<li><strong>984px</strong></li>
+							<li><strong>1200px</strong></li>
 						</ul>
 						
 					</section>
@@ -550,7 +551,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 					<hr>
 					<section class="doc-section" id="download">
 						<h3>Downloads</h3>
-						<p>The Wirefy download is a zip file (~25kb) containing all the CSS groundwork and JS goodies to help you get start wireframing your next project. </p>
+						<p>The Wirefy download is a zip file (~1.5Mb) containing all the CSS groundwork and JS goodies to help you get start wireframing your next project. </p>
 						<a href="https://github.com/cjdsie/wirefy/" class="remove-bottom button">Download Wirefy 1.0 from Github</a>
 						<div class="post-button-note half-bottom">or <a href="https://github.com/cjdsie/wirefy/">View Source on Github</a></div>
 						
@@ -560,27 +561,32 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 							<li>
 								<strong>stylesheets</strong> <em>(folder)</em>
 								<ul class="circle">
-									<li><strong>base.css</strong>: Basic styles of Skeleton</li>
-									<li><strong>skeleton.css</strong>: The glorious Skeleton grid</li>
+									<li><strong>base.css</strong>: Basic styles of Wirefy</li>
+									<li><strong>docs.css</strong>: The styles for this page</li>
 									<li><strong>layout.css</strong>: File with no specific styles, but a variety of useful media queries</li>
 								</ul>
 							</li>
 							<li>
-								<strong>javascripts</strong> <em>(folder)</em>
+								<strong>js</strong> <em>(folder)</em>
 								<ul class="circle">
-									<li><strong>tabs.js</strong>: Contains code for activating tabs and should house your site's JS/jQuery (using Google's CDN to pull in jQuery as well)</li>
-									<li><strong>plugins</strong> <em>(folder)</em>: An empty directory for your jQuery plugins</li>
+									<li><strong>tabs.js</strong></li>
+									<li><strong>plugins</strong></li>
+									<li><strong>helper</strong></li>
+									<li><strong>jQuery</strong></li>
+									<li><strong>modernizr</strong></li>
+									<li><strong>selectivizr</strong></li>
+									<li><strong>bootstrap-typeahead</strong></li>
+									<li><strong>script</strong></li>
 								</ul>
 							</li>
 							<li>
-								<strong>images</strong> <em>(folder):</em>
+								<strong>img</strong> <em>(folder):</em>
 								<ul class="circle">
-									<li><strong>favicon.ico</strong>: Standard 16x16 favicon</li>
-									<li><strong>apple-touch-icon (x3)</strong>: All three sizes of Apple touch icons for iPhone 3, iPad and iPhone 4 with retina.</li>
+									<li><strong>Several images for startup</strong></li>
 								</ul>
 							</li>
 							<li><strong>robots.txt</strong>: SEO, search-crawler file. Don't need to touch it, just there for your own good</li>
-							<li><strong>404.html</strong>: Placeholder 404 page just to get you started</li>
+							<li><strong>humans.txt</strong>: Author information.</li>
 
 						</ul>
 						</section>
