File size reduced

--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 					<hr>
 					<section class="doc-section" id="download">
 						<h3>Downloads</h3>
-						<p>The Wirefy download is a zip file (~1.5Mb) containing all the CSS groundwork and JS goodies to help you get start wireframing your next project. </p>
+						<p>The Wirefy download is a zip file (~700Kb) containing all the CSS groundwork and JS goodies to help you get start wireframing your next project. </p>
 						<a href="https://github.com/cjdsie/wirefy/zipball/master" class="remove-bottom button">Download Wirefy 1.0 from Github</a>
 						<div class="post-button-note half-bottom">or <a href="https://github.com/cjdsie/wirefy/">View Source on Github</a></div>
 						
