--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 <body>
 
 			<div class="container clearfix">
-				<div class="sidebar clearfix">
+				<div class="sidebar">
 					
 						<h3 id="logo">Wirefy</h3>
 						<nav role="navigation" class="main">
@@ -108,7 +108,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 						<a href="http://twitter.com/share" class="twitter-share-button" data-text="Wirefy - A Rapid Responsive Wireframing Tool To Demonstrate Hierarchy And Functionality" data-count="horizontal" data-via="chrisdasie">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
 					</header>
 					<hr class="large">
-					<section class="doc-section" id="whatAndWhy">
+					<section class="doc-section clearfix" id="whatAndWhy">
 						<h3>What Is It?</h3>
 						<p>Wirefy is a collection of CSS &amp; JS files to help you rapidly experiment with responsive wireframes. Whether you keep them to yourself or use them to help educate your clients, Wirefy is flexible and here to help. Wirefy has been built from the ground up. Following the philosophy of mobile first, Wirefy will respond to the proper viewport. <strong>Go ahead, resize this page to see how it works.</strong> Wirefy is style agnostic so that clients don't get hung up on colours, fonts, other design elements. It's meant to be another tool for your development kit that provides the most basic styles as a foundation.</p>
 					</section>
@@ -246,7 +246,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 							</div>
 					</section>
 					<hr>
-					<section class="doc-section" id="buttons">
+					<section class="doc-section clearfix" id="buttons">
 						<h3>Buttons</h3>
 						<p>Buttons are intended for action and thus should have appropriate weight. The standard button is given that weight with a little bit of depth and a strong hover.</p>
 						<a href="#" class="button">Click Me For Action</a>
@@ -257,7 +257,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 						<p>Some very simple tabs that have dead simple jQuery that hook them up to their corresponding content.</p>
 						<ul class="tabs">
 							<li><a class="active" href="#simple">Simple</a></li>
-							<li><a href="#lightweight">Lightweight</a></li>
+							<li><a href="#lightweight">Light</a></li>
 							<li><a href="#mobileFriendly">Mobile</a></li>
 						</ul>
 						<ul class="tabs-content">
@@ -267,7 +267,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 						</ul>
 					</section>
 					<hr>
-					<section class="doc-section" id="tables">
+					<section class="doc-section clearfix" id="tables">
 						<h3>Tables</h3>
 						<p>Tables can be very useful as a way to display simple data sets to clients.</p>
 						<h3 class="h4">Unclassified table</h3>
@@ -522,7 +522,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 						</div>
 					</section>
 					<hr  >
-					<section class="doc-section" id="mediaQueries">
+					<section class="doc-section clearfix" id="mediaQueries">
 						<h3>Media Queries</h3>
 						<ul class="square">
 							<li><strong>320px</strong></li>
@@ -535,7 +535,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 						
 					</section>
 					<hr>
-					<section class="doc-section" id="support">
+					<section class="doc-section clearfix" id="support">
 						<h3>Support for Wirefy</h3>
 						<p>Do you have feedback, questions or ideas about how to make Wirefy better - Send them along to <em><a href="mailto:chris@chrisdasie.com">chris@chrisdasie.com</a></em> and I will get back to you as soon as I can</p>
 						<ul class="tabs">
@@ -587,7 +587,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 						</ul>
 					</section>
 					<hr>
-					<section class="doc-section" id="download">
+					<section class="doc-section clearfix" id="download">
 						<h3>Downloads</h3>
 						<p>The Wirefy download is a zip file (~700Kb) containing all the CSS groundwork and JS goodies to help you get start wireframing your next project. </p>
 						<a href="https://github.com/cjdsie/wirefy/zipball/master" class="remove-bottom button">Download Wirefy 1.1 from Github</a>
@@ -628,7 +628,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 
 						</ul>
 						</section>
-					<footer role="contentinfo">
+					<footer role="contentinfo" class="clearfix">
 			<small>Wirefy, a flexible responsive wireframe boilerplate by <a href="http://chrisdasie.com">Chris Da Sie</a>.</small>
 			<small>Wirefy wouldn&#8217;t be possible without <a href="http://getskeleton.com">Skeleton</a>, <a href="http://stuffandnonsense.co.uk/projects/320andup/">320 and Up</a>, <a href="http://html5boilerplate.com/">HTML5 Boilerplate</a>, <a href="http://framelessgrid.com/">Frameless grid</a> and <a href="http://twitter.github.com/bootstrap/">Bootstrap</a>. Licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>. The Font Awesome webfont, CSS files are licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</small>
 			</footer>
