Twitter account added

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- 
 Wirefy by Chris Da Sie
-Version: 1.2
+Version: 1.2.1
 URL: https://github.com/cjdsie/wirefy
 Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 -->
@@ -108,7 +108,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 				<div class="content clearfix">
 					<header>
 						<h1>A Rapid Responsive Wireframing Tool To Demonstrate Hierarchy And Functionality</h1>
-						<a href="http://twitter.com/share" class="twitter-share-button" data-text="Wirefy - A Rapid Responsive Wireframing Tool To Demonstrate Hierarchy And Functionality" data-count="horizontal" data-via="chrisdasie">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+						<a href="http://twitter.com/share" class="twitter-share-button" data-text="Wirefy, The Rapid Responsive Wireframing Tool To Demonstrate Hierarchy And Functionality" data-count="horizontal" data-via="wirefy">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
 					</header>
 					<hr class="large">
 					<section class="doc-section clearfix" id="whatAndWhy">
