Minor Tweaks Index

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- 
 Wirefy by Chris Da Sie
-Version: 1.2.1
+Version: 1.2.2
 URL: https://github.com/cjdsie/wirefy
 Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 -->
@@ -619,6 +619,9 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 									<li>
 										<strong>V1.1.0</strong> <em>(6/19/2012)</em>: 3 responsive menu options
 									</li>
+									<li>
+										<strong>V1.3.0</strong> <em>(6/27/2012)</em>: Index page and styles revised to work as a better development tool.
+									</li>
 								</ul>
 							</li>
 							<li id="upcoming">
@@ -645,7 +648,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 					<section class="doc-section clearfix" id="download">
 						<h3>Downloads</h3>
 						<p>The Wirefy download is a zip file (~700Kb) containing all the CSS groundwork and JS goodies to help you get start wireframing your next project. </p>
-						<a href="https://github.com/cjdsie/wirefy/zipball/master" class="remove-bottom button">Download Wirefy 1.1 from Github</a>
+						<a href="https://github.com/cjdsie/wirefy/zipball/master" class="remove-bottom button">Download Wirefy 1.3 from Github</a>
 						<div class="post-button-note half-bottom">or <a href="https://github.com/cjdsie/wirefy/">View Source on Github</a></div>
 						
 						<p>The file structure for Wirefy is:</p>
@@ -655,20 +658,20 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 								<strong>stylesheets</strong> <em>(folder)</em>
 								<ul class="circle">
 									<li><strong>base.css</strong>: Basic styles of Wirefy</li>
-									<li><strong>docs.css</strong>: The styles for this page</li>
 									<li><strong>layout.css</strong>: File with no specific styles, but a variety of useful media queries</li>
 								</ul>
 							</li>
 							<li>
 								<strong>js</strong> <em>(folder)</em>
 								<ul class="circle">
-									<li><strong>tabs.js</strong></li>
+									<li><strong>tabs</strong></li>
 									<li><strong>plugins</strong></li>
 									<li><strong>helper</strong></li>
 									<li><strong>jQuery</strong></li>
 									<li><strong>modernizr</strong></li>
 									<li><strong>selectivizr</strong></li>
 									<li><strong>bootstrap-typeahead</strong></li>
+									<li><strong>responsive_dropdown</strong></li>
 									<li><strong>script</strong></li>
 								</ul>
 							</li>
