--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 						</ul>
 						
 					</nav>
-					<!-- AdPacks.com Zone Code -->
+					<!-- AdPacks.com Zone Code 
 					<div id="bsap_1277196" class="bsarocks bsap_991a376ef1e7767477b39694cfa817c9"></div>
 					<a href="http://adpacks.com" id="bsap_aplink">via Ad Packs</a>
-					<!-- End AdPacks.com Zone Code -->
+					 End AdPacks.com Zone Code -->
 					&nbsp;
 					
 				</div>
