--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 							<li><a href="#whatAndWhy">What &amp; Why</a></li>
 							<li><a href="#grid">Grid</a></li>
 							<li><a href="#menu">Menu</a></li>
-							<li><a href="#breadcrumb">Breadcrumbs</li>
-							<li><a href="#pagination">Pagination</li>
-							<li><a href="#pager">Pager</li>
+							<li><a href="#breadcrumb">Breadcrumbs</a></li>
+							<li><a href="#pagination">Pagination</a></li>
+							<li><a href="#pager">Pager</a></li>
 							<li><a href="#images">Images</a></li>
 							<li><a href="#slider">Slideshow</a></li>
 							<li><a href="#typography">Typography</a></li>
