--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <!-- 
 Wirefy by Chris Da Sie
 Version: 1.2.3
@@ -28,7 +29,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
   ================================================== -->
 	<meta name="HandheldFriendly" content="True">
 	<meta name="MobileOptimized" content="320">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0">
 	
 
 	<!-- CSS
