--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 	<!-- For iPad 1-->
 	<!-- <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/m/apple-touch-icon.png"> -->
 	<!-- For the new iPad -->
-	<!-- <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/h/apple-touch-icon-144x144-precomposed.png">
+	<!-- <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/h/apple-touch-icon-144x144-precomposed.png">-->
 	<!-- For iPhone 3G, iPod Touch and Android -->
 	<!-- <link rel="apple-touch-icon-precomposed" href="img/l/apple-touch-icon-precomposed.png"> -->
 	<!-- For Nokia -->
@@ -756,7 +756,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 						</ul>
 						<ul class="tabs-content">
 							<li class="active" id="browsers">
-								<p>Skeleton has been tested across as many devices and browsers as I could get my hands on:</p>
+								<p>Wirefy has been tested across as many devices and browsers as I could get my hands on:</p>
 								<ul class="square add-bottom">
 									<li>Latest Chrome (Mac/PC)</li>
 									<li>Firefox 4.0, 3.6, 3.5, 3.0 (Mac/PC)</li>
