--- a/index.html
+++ b/index.html
@@ -781,6 +781,9 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 									<li>
 										<strong>V1.4.0</strong> <em>(7/17/2012)</em>: Added three responsive slideshow options.
 									</li>
+									<li>
+										<strong>V1.4.1</strong> <em>(8/2/2012)</em>: Bug fixes.
+									</li>
 								</ul>
 							</li>
 							<li id="upcoming">
