responsive menu scaling issue

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <!-- 
 Wirefy by Chris Da Sie
-Version: 1.4.1
+Version: 1.4.2
 URL: https://github.com/cjdsie/wirefy
 Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 -->
@@ -29,7 +29,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
   ================================================== -->
 	<meta name="HandheldFriendly" content="True">
 	<meta name="MobileOptimized" content="320">
-	<meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1.0">
 	
 	
 	<!-- CSS - These are your main CSS files. All base styles can be found in the base.css and any additional styles 
