--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 				<div class="sidebar clearfix">
 					
 						<h3 id="logo">Wirefy</h3>
-						<nav class="main" id="nav">
+						<nav class="main clearfix" id="nav">
 						<ul>
 							<li><a href="#whatAndWhy">What &amp; Why</a></li>
 							<li><a href="#grid">Grid</a></li>
