Media Queries Updated

--- a/index.html
+++ b/index.html
@@ -750,20 +750,22 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 					<hr  >
 					<section class="doc-section clearfix" id="mediaQueries">
 						<h3>Media Queries</h3>
+						<p>For a more solid foundation available across a larger sea of devices, we have opted to use <i>ems<i> as our media query baseline instead of set pixel screens.</p>
 						<ul class="square">
-							<li><strong>320px</strong></li>
-							<li><strong>640px</strong></li>
-							<li><strong>720px</strong></li>
-							<li><strong>888px</strong></li>
-							<li><strong>984px</strong></li>
-							<li><strong>1200px</strong></li>
+							<li><strong>under 30em</strong></li>
+							<li><strong>30em</strong></li>
+							<li><strong>40em</strong></li>
+							<li><strong>45em</strong></li>
+							<li><strong>55.5em</strong></li>
+							<li><strong>61.5em</strong></li>
+							<li><strong>75em</strong></li>
 						</ul>
 						
 					</section>
 					<hr>
 					<section class="doc-section clearfix" id="support">
 						<h3>Support for Wirefy</h3>
-						<p>Do you have feedback, questions or ideas about how to make Wirefy better - Send them along to <em><a href="mailto:chris@chrisdasie.com">chris@chrisdasie.com</a></em> and I will get back to you as soon as I can</p>
+						<p>Do you have feedback, questions or ideas about how to make Wirefy better - Send them along to <em><a href="mailto:chris@chrisdasie.com">chris@chrisdasie.com</a></em> and I will get back to you as soon as I can.</p>
 						<ul class="tabs">
 							<li><a class="active" href="#browsers">Browsers</a></li>
 							<li><a href="#changelog">Changelog</a></li>
@@ -774,12 +776,12 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 								<p>Wirefy has been tested across as many devices and browsers as I could get my hands on:</p>
 								<ul class="square add-bottom">
 									<li>Latest Chrome (Mac/PC)</li>
-									<li>Firefox 4.0, 3.6, 3.5, 3.0 (Mac/PC)</li>
+									<li>Latest Chrome (Mac/PC)</li>
 									<li>Latest Safari</li>
 									<li>IE9, IE8, IE7</li>
 									<li>iPhone (Retina)</li>
-									<li>Droid (Charge/Original)</li>
-									<li>iPad</li>
+									<li>Droid</li>
+									<li>iPad 1, 2</li>
 								</ul>
 							</li>
 							<li id="changelog">
