--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 					<hr  >
 					<section class="doc-section clearfix" id="mediaQueries">
 						<h3>Media Queries</h3>
-						<p>For a more solid foundation available across a larger sea of devices, we have opted to use <i>ems<i> as our media query baseline instead of set pixel screens.</p>
+						<p>For a more solid foundation available across a larger sea of devices, we have opted to use <i>ems</i> as our media query baseline instead of set pixel screens.</p>
 						<ul class="square">
 							<li><strong>under 30em</strong></li>
 							<li><strong>30em</strong></li>
