--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 	<!-- For Nokia -->
 	<link rel="shortcut icon" href="img/l/apple-touch-icon.png"> 
 	<!-- For everything else -->
-	<link rel="shortcut icon" href="/favicon.ico">
+	<link rel="shortcut icon" href="img/startup/favicon.ico">
 
 	<!--iOS -->
 	<meta name="apple-mobile-web-app-capable" content="yes">
