Added alt-spacing class to better fill full width layouts

--- a/index.html
+++ b/index.html
@@ -104,17 +104,38 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 			
     <div role="main" class="content clearfix">
  	  <hr class="large">
- 	  <section class="doc-section">
+ 	  <section class="doc-section row clearfix">
 	
- 	  <!-- For use of the slider, please review responsive_slideshow.js and select the id for 
+ 	  <!-- Slider
+	  For use of the slider, please review responsive_slideshow.js and select the id for 
       which slide show you would like. You may need to modify this if you do not want it to fill 
       the 960 grid. 
- 	  For Example: 
+ 	  For Example:
+ 
  	    <ul class="rslides" id="slider1">
  	      <li><img src="http://placehold.it/1200x300" alt="" /></li>
  	      <li><img src="http://placehold.it/1200x300" alt="" /></li>
  	      <li><img src="http://placehold.it/1200x300" alt="" /></li>
  	    </ul> -->
+
+		<!-- Columns 
+		The columns have changed. You can now use them in a much more fluid way. In case you need 
+		a bit of extra spacing we've included a class called alt-spacing. 
+		
+		Example 1:
+		<section class="row clearfix">
+		<div class="ten columns"></div>
+		<div class="six columns"></div>
+		</section> 
+		
+		Example 2:
+		<section class="row clearfix">
+		<div class="five columns"></div>
+		<div class="five columns alt-spacing"></div>
+		<div class="five columns alt-spacing"></div>
+		</section>
+		
+		-->
 
  	  </section>
 				
